--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "15.4.5",
-    "posthog-js": "^1.258.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-fast-marquee": "^1.6.5",
