--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "15.4.5",
     "prisma": "^6.13.0",
     "tailwindcss": "^4",
+    "tailwindcss-motion": "^1.1.1",
     "typescript": "^5"
   }
 }
